# Phase2_SWE_Testing

./: DatatypeFactoryTest.java  IoUtilsTest.java  README.md  checkout_repos.py  clone_repos.py  drip_downloader.py  fix_manifest.py  ingest_local_dataset.py  patch_manifest.py  prepare_agonetest_inputs.py  pyproject.toml  setup_rq2_env.ps1  stitch.py
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
AgoneTest/: agone_test.py  envExample  errorCorrection.py  execution_manager.py  extract.py  gradleLib.py  mavenLib.py  post_build_checks.py  requirements.txt  run_settings.yaml  utils.py
artifacts/: rq1_summary.csv  rq2_error_report.md  rq2_metrics.csv  rq3_quality.csv  summary.md
artifacts/ablations/: ablation_summary.csv
artifacts/benchmark/: benchmark_outcomes.csv  rq1_summary.csv  rq2_error_report.md  rq3_quality.csv  run_result.json
cases/index/: cases.jsonl
failed_classes/: DatatypeFactoryTest_failed.java  DatatypeFactoryTest_processed_iter2.java  IoUtilsTest_failed.java  IoUtilsTest_processed_iter1.java  IoUtilsTest_processed_iter2.java  LiteralTest_processed_iter2.java
output/: classes.csv  output_agone_classes_filtered.csv  output_agone_info.txt  output_agone_mean.csv  output_agone_mean_filtered.csv  output_agone_projects.csv  output_agone_projects_filtered.csv  project_info.json
project_docs/: Phase 1 (1).docx  main.py  main2.py
tests/: test_ablation_runner.py  test_benchmark.py  test_cases.py  test_evosuite.py  test_healing.py  test_healing_reassert_style.py  test_java_parser.py  test_regen.py  test_rq1_eval.py  test_rq3_eval.py
(+1294 files in other folders)
